# kiwiki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.template.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  bugs.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  lint.yml
app/: auth.py  constants.py  main.py  mcp_git.py  mcp_server.py  models.py  rate_limiter.py  search.py  session_store.py  storage.py  tenancy.py  user_store.py
app/static/: kiwiki-fonts.css  kiwiki-motion.bundle.js  kiwiki.css  kiwiki.js
app/templates/: editor.html  index.html  layout.html  login.html  settings.html
app/templates/partials/: file_history.html  file_tree.html  file_view.html  recent_created.html  recent_edited.html  recent_files.html  search_history.html  search_results.html  sidebar_account.html  tags_overview.html
charts/kiwiki/: Chart.yaml  values.schema.json  values.yaml
charts/kiwiki/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  (+9 more)
docs/: architecture.md  ui-accessibility.md
frontend/: kiwiki-motion.js
tests/: browser_smoke.py  conftest.py  test_api_frontmatter.py  test_api_read.py  test_auth.py  test_deployment_config.py  test_frontend_regressions.py  test_health.py  test_mcp_server.py  test_models.py  test_rate_limiter.py  test_search.py  test_session_store.py  test_storage.py  test_ui_file.py  test_user_store.py
