[project]
name = "kiwiki"
version = "3.0.0"
description = "KI-gestütztes Wiki mit MCP-Server"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = [
  "E501",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 60
show_missing = true
